added slim and sass

--- a/views/home.slim
+++ b/views/home.slim
@@ -1,4 +1,3 @@
-<p>
-  Pit Stop helps dogs get fosterd and adopted.
-</p>
+p Pit Stop helps dogs get fosterd and adopted.
+
 <img src="/images/cash_close_up.jpg" alt="Kyle Doherty">
