--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,29 +1,12 @@
-<% title="PitStop" %>
-
-<!doctype html> 
-<html lang="en"> 
-<head> 
-  <title><%= @title || "PitStop" %></title>
-  <meta charset ="utf-8"> 
-  <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<header>
-
-		<h1>PitStop</h1>
-		<nav>
-			</ul>
-				<li><a href="/" title="Home">Home</a></li>
-				<li><a href="/about" title="About">About</a></li>
-				<li><a href="/contact" title="Contact">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<section>
-		<%= yield %>
-	</section>
-
-</body>
-</html>
+doctype html
+html lang="en"
+  head
+    title== @title ||= "Pit Stop"
+    meta charset="utf-8"
+    link rel="stylesheet" href="/styles.css"
+  body
+    header
+      h1 Pit Stop
+      ==slim :nav
+    section
+      == yield
