--- a/views/not_found.slim
+++ b/views/not_found.slim
@@ -1,4 +1,2 @@
-<h2>404!</h2>
-<p>
-	Looks like you're lost.  The page you're looking for is missing or doesn't exist. May we suggest going back <a href="/">Home</a> and starting over?
-</p>
+h2 404!
+p Looks like you're lost.  The page you're looking for is missing or doesn't exist. May we suggest going back <a href="/">Home</a> and starting over?
