fixed the edit route and added delete

--- a/views/show_dog.slim
+++ b/views/show_dog.slim
@@ -9,4 +9,4 @@ p <a href="/dogs">Back to Dogs index</a>
 p <a href="/dogs/#{@dog.id}/edit">Edit this Dog</a>
 form action="/dogs/#{@dog.id}" method="POST" 		    
 	input type="hidden" name="_method" value="DELETE"
-	input type ="submit" value="delete this song"
+	input type ="submit" value="delete this Dog"
