--- a/views/nav.slim
+++ b/views/nav.slim
@@ -3,3 +3,4 @@ nav
     li <a href="/" title="Home">Home</a>
 	li <a href="/about" title="About">About</a>
 	li <a href="/contact" title="Contact">Contact</a>
+	li <a href="/dogs" title="Dogs">Dogs</a>
